tests/errors/nested_return_value_type_mismatch.dang
# Nested return expressions in a return value still target the enclosing function
bad: String! {
  return {
    return 42
  }
}

pub result = bad
